--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Quarkus Microservice</title>
+    <title>Spinnaker Study App</title>
     <style>
         body {
             color: #ffffff;
-            background-color: purple;
+            background-color: lightblue;
             font-family: Arial, sans-serif;
             font-size: 14px;
         }
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div align="center">
-    <h1>Welcome to V1 the quarkus web application</h1>
+    <h1>Hello and welcome to our show.</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
 </div>
 </body>
