--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div align="center">
-    <h1>Hello and welcome to our show.</h1>
+    <h1>Hello and welcome to our show, brought to you by Helm.</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
 </div>
 </body>
